added User controller and Dto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,49 @@
+# Application Info
 spring.application.name=AddressBook
 spring.profiles.active=dev
 environment=COMMON
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/address_db
-spring.datasource.username=${ADDRESS_DB_USERNAME:addressuser}
-spring.datasource.password=${ADDRESS_DB_PASSWORD:password}
+# MySQL Datasource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/address_db
+spring.datasource.username=addressuser
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+# Server Port
+server.port=8080
+
+# H2 Database Configuration (Commented Out for MySQL Use)
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+
+# SpringDoc API Documentation
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Mail Configuration
+spring.mail.username=nileshpandey8740@gmail.com
+spring.mail.password=qnnv kdjf imne ffol  # 16-character App Password
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+
+# Logging for Mail
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.springframework.mail.javamail=DEBUG
+
+# JWT Configuration (Avoid exposing this in production)
+jwt.secret=mySecretKey123mySecretKey123mySecrethuewduewfuerfKey12== 
+jwt.expiration=3600000
+
+# Spring Security Default Credentials (Remove in Production)
+spring.security.user.name=admin
+spring.security.user.password=admin123
