--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,16 @@ jwt.expiration=3600000
 # Spring Security Default Credentials (Remove in Production)
 spring.security.user.name=admin
 spring.security.user.password=admin123
+
+#radis
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=6000
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.queue=myQueue
